# easiest_slam

./: CMakeLists.txt  main.c
drawings/: CMakeLists.txt
drawings/include/: global_parameters.h  glut_drawings.h  gtk_drawings.h  map_calculator.h
drawings/lib/: global_parameters.c  glut_drawings.c  gtk_drawings.c  map_calculator.c
mathlib/: CMakeLists.txt
mathlib/include/: matrix.h  spline.h
mathlib/lib/: matrix.c  spline.c
